<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- layout/*.xml -->
    <TextView
        android:id="@+id/helps"
        android:layout_width="119dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="27dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="376dp"
        android:text="@string/helps"
        android:textAppearance="@style/helps"
        android:lineSpacingExtra="0sp"
        android:gravity="center_horizontal|center_vertical"
        />

    <!--
      Font family: Comfortaa
      Line height: 14sp
    -->







    <!-- layout/*.xml -->
<TextView
android:id="@+id/upcoming_sc"
android:layout_width="156dp"
android:layout_height="31dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="28dp"
android:layout_alignParentTop="true"
android:layout_marginTop="441dp"
android:text="@string/upcoming_sc"
android:textAppearance="@style/upcoming_sc"
android:lineSpacingExtra="0sp"
android:gravity="center_vertical"
    />

    <!--
      Font family: Montserrat
      Line height: 14sp
    -->








    <!-- layout/*.xml -->
<TextView
android:id="@+id/nothing_pla"
android:layout_width="156dp"
android:layout_height="31dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="126dp"
android:layout_alignParentTop="true"
android:layout_marginTop="480dp"
android:text="@string/nothing_pla"
android:textAppearance="@style/nothing_pla"
android:lineSpacingExtra="0sp"
android:gravity="center_horizontal|center_vertical"
    />

    <!--
      Font family: Comfortaa
      Line height: 14sp
    -->








    <!-- layout/*.xml -->
<TextView
android:id="@+id/level_1"
android:layout_width="119dp"
android:layout_height="27dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="27dp"
android:layout_alignParentTop="true"
android:layout_marginTop="266dp"
android:text="@string/level_1"
android:textAppearance="@style/level_1"
android:lineSpacingExtra="0sp"
android:gravity="center_horizontal|center_vertical"
    />

    <!--
      Font family: Comfortaa
      Line height: 14sp
    -->








    <!-- layout/*.xml -->
<TextView
android:id="@+id/donations"
android:layout_width="119dp"
android:layout_height="27dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="147dp"
android:layout_alignParentTop="true"
android:layout_marginTop="376dp"
android:text="@string/donations"
android:textAppearance="@style/donations"
android:lineSpacingExtra="0sp"
android:gravity="center_horizontal|center_vertical"
    />

    <!--
      Font family: Comfortaa
      Line height: 14sp
    -->








    <!-- layout/*.xml -->
<TextView
android:id="@+id/friends"
android:layout_width="119dp"
android:layout_height="27dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="266dp"
android:layout_alignParentTop="true"
android:layout_marginTop="376dp"
android:text="@string/friends"
android:textAppearance="@style/friends"
android:lineSpacingExtra="0sp"
android:gravity="center_horizontal|center_vertical"
    />

    <!--
      Font family: Comfortaa
      Line height: 14sp
    -->








    <!-- layout/*.xml -->
<TextView
android:id="@+id/level_3"
android:layout_width="119dp"
android:layout_height="27dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="147dp"
android:layout_alignParentTop="true"
android:layout_marginTop="266dp"
android:text="@string/level_3"
android:textAppearance="@style/level_3"
android:lineSpacingExtra="0sp"
android:gravity="center_horizontal|center_vertical"
    />

    <!--
      Font family: Comfortaa
      Line height: 14sp
    -->








    <!-- layout/*.xml -->
<TextView
android:id="@+id/luca_alma"
android:layout_width="132dp"
android:layout_height="41dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="138dp"
android:layout_alignParentTop="true"
android:layout_marginTop="205dp"
android:text="@string/luca_alma"
android:textAppearance="@style/luca_alma"
android:lineSpacingExtra="0sp"
android:gravity="center_vertical"
    />

    <!--
      Font family: Montserrat
      Line height: 14sp
    -->


    <View
        android:id="@+id/helps_button"
        android:layout_width="80dp"
        android:layout_height="87dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="302dp"
        android:background="@drawable/ic_helps"
        />

    <!-- layout/*.xml -->
    <View
        android:id="@+id/donations_button"
        android:layout_width="98dp"
        android:layout_height="87dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="169dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="302dp"
        android:background="@drawable/ic_donations"
        />

    <View
        android:id="@+id/friends_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="288dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="302dp"
        android:background="@drawable/ic_friends_80dp"
        />

    <!-- layout/*.xml -->
    <View
        android:id="@+id/profile"
        android:layout_width="194dp"
        android:layout_height="194dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="107dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/profile_round"
        />


    <!-- layout/*.xml -->
    <View
        android:id="@+id/find_event_button"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="111dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="547dp"
        android:background="@drawable/ic_find_event"
        />


</RelativeLayout>